--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "8065:80"
     volumes:
       - ./web/nginx.conf:/etc/web/conf.d/default.conf:ro
-      - ./web:/var/www/timelock:ro
+      - ./web:/var/www:ro
 
 volumes:
   vault_data:
