fix path for www

--- a/server/web/nginx.conf
+++ b/server/web/nginx.conf
@@ -49,6 +49,6 @@ server {
 
     # Serve static file when rewritten
     location = /decrypt.html {
-        root /var/www/timelock;
+        root /var/www;
     }
 }
