--- a/server/web/nginx.conf
+++ b/server/web/nginx.conf
@@ -10,9 +10,15 @@ server {
     add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     client_max_body_size 100M;
 
+    # Static assets
+    location = /favicon.ico {
+        root /var/www;
+        access_log off;
+    }
+
     # GET / → encrypt instruction page
     location = / {
-        root /var/www/timelock;
+        root /var/www;
         try_files /encrypt.html =404;
     }
 
@@ -35,6 +41,12 @@ server {
     # Disable caching
     add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     client_max_body_size 100M;
+
+    # Static assets
+    location = /favicon.ico {
+        root /var/www;
+        access_log off;
+    }
 
     # GET /  → decrypt instruction page
     # PUT /  → FastApi /decrypt
