fix service name from app to aes_tc_app

--- a/server/web/nginx.conf
+++ b/server/web/nginx.conf
@@ -24,7 +24,7 @@ server {
 
     # PUT /1year, /1month, etc. → FastApi encrypt
     location / {
-        proxy_pass         http://app:8000;
+        proxy_pass         http://aes_tc_app:8000;
         proxy_set_header   Host $host;
         proxy_read_timeout 300s;
     }
@@ -54,7 +54,7 @@ server {
         if ($request_method = GET) {
             rewrite ^ /decrypt.html last;
         }
-        proxy_pass         http://app:8000/decrypt;
+        proxy_pass         http://aes_tc_app:8000/decrypt;
         proxy_set_header   Host $host;
         proxy_read_timeout 300s;
     }
