--- a/server/web/nginx.conf
+++ b/server/web/nginx.conf
@@ -1,37 +1,5 @@
 server {
     listen 80;
-    server_name en.yourdomain.com;
-
-    # Disable nginx version
-    server_tokens off;
-    proxy_no_cache 1;
-    proxy_cache_bypass 1;
-    # Disable caching
-    add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-    client_max_body_size 100M;
-
-    # Static assets
-    location = /favicon.ico {
-        root /var/www;
-        access_log off;
-    }
-
-    # GET / → encrypt instruction page
-    location = / {
-        root /var/www;
-        try_files /encrypt.html =404;
-    }
-
-    # PUT /1year, /1month, etc. → FastApi encrypt
-    location / {
-        proxy_pass         http://aes_tc_app:8000;
-        proxy_set_header   Host $host;
-        proxy_read_timeout 300s;
-    }
-}
-
-server {
-    listen 80;
     server_name de.yourdomain.com;
 
     # Disable nginx version
@@ -42,25 +10,19 @@ server {
     add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
     client_max_body_size 100M;
 
-    # Static assets
+    # favicon — served directly, never hits FastAPI
     location = /favicon.ico {
-        root /var/www;
-        access_log off;
+        proxy_pass       http://aes_tc_app:8000/favicon.ico;
+        access_log       off;
     }
 
-    # GET /  → decrypt instruction page
-    # PUT /  → FastApi /decrypt
-    location = / {
-        if ($request_method = GET) {
-            rewrite ^ /decrypt.html last;
-        }
-        proxy_pass         http://aes_tc_app:8000/decrypt;
+    # everything else → FastAPI
+    # /en (GET → page, PUT → encrypt)
+    # /de (GET → page, PUT → decrypt)
+    # /health
+    location / {
+        proxy_pass         http://aes_tc_app:8000;
         proxy_set_header   Host $host;
         proxy_read_timeout 300s;
-    }
-
-    # Serve static file when rewritten
-    location = /decrypt.html {
-        root /var/www;
     }
 }
