fix default subdomain

--- a/server/web/nginx.conf
+++ b/server/web/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name de.yourdomain.com;
+    server_name t.yourdomain.com;
 
     # Disable nginx version
     server_tokens off;
